--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
             <li>HTML & CSS</li>
             <li>JavaScript (React & Node.js)</li>
             <li>SQL Database and Sequelize ORM</li>
+            <li>Docker</li>
             <li>Python (currently learning)</li>
           </ul>
           <ul class="stack-list">
